--- a/_episodes/01.5-visualizing.md
+++ b/_episodes/01.5-visualizing.md
@@ -1,3 +1,16 @@
+
+---
+title: Analyzing Supernova Data
+teaching: 30
+exercises: 10
+questions:
+- "How can I process create simple plots in Python?"
+objectives:
+- "Plot simple graphs from data."
+keypoints:
+- "Use the `pyplot` library from `matplotlib` for creating simple visualizations."
+---
+
 ## Visualizing data
 
 The mathematician Richard Hamming once said, "The purpose of computing is insight, not numbers," and
