--- a/_episodes/01.5-visualizing.md
+++ b/_episodes/01.5-visualizing.md
@@ -75,7 +75,7 @@ matplotlib.pyplot.show()
 ![Maximum Value Along The First Axis](../fig/max_03D1ar.png)
 
 ~~~
-min_plot = matplotlib.pyplot.plot(mjd,numpy.nanmin(data[:,1:], axis=0))
+min_plot = matplotlib.pyplot.plot(mjd,numpy.nanmin(data[:,1:], axis=1))
 matplotlib.pyplot.show()
 ~~~
 {: .language-python}
@@ -115,6 +115,7 @@ import numpy as np
 import matplotlib.pyplot as plt
 
 data = np.loadtxt(fname='data/03D1ar.csv', delimiter=',', skiprows=1)
+mjd = data[:,0]
 
 fig = plt.figure(figsize=(15.0, 4.0))
 
