--- a/_episodes/08.5-testing.md
+++ b/_episodes/08.5-testing.md
@@ -1,1 +1,12 @@
 
+---
+title: Automating Tests for Your Code
+teaching: 30
+exercises: 0
+questions:
+- "What is you quest?"
+objectives:
+- "Staying alive"
+keypoints:
+- "Foofofoo."
+---
