--- a/_episodes/01.5-visualizing.md
+++ b/_episodes/01.5-visualizing.md
@@ -4,9 +4,11 @@ title: Analyzing Supernova Data
 teaching: 30
 exercises: 10
 questions:
-- "How can I process create simple plots in Python?"
+- "How can I create simple plots in Python?"
+- "How can I create multi-panel plots in Pyhton?"
 objectives:
 - "Plot simple graphs from data."
+- "Change some of the elements of a plot."
 keypoints:
 - "Use the `pyplot` library from `matplotlib` for creating simple visualizations."
 ---
@@ -160,3 +162,5 @@ what to draw for each one,
 and that we want a tight layout.
 (If we leave out that call to `fig.tight_layout()`,
 the graphs will actually be squeezed together more closely.)
+
+{% include links.md %}
