--- a/_episodes/08.5-testing.md
+++ b/_episodes/08.5-testing.md
@@ -5,8 +5,14 @@ teaching: 30
 exercises: 0
 questions:
 - "What is you quest?"
+- ""
 objectives:
 - "Staying alive"
+- ""
 keypoints:
 - "Foofofoo."
+- ""
 ---
+
+
+{% include links.md %}
